# 8086-processor-emulation-validation-testset

./: README.md  adc16_add16_sbb16_sub16.py  adc_add_sbb_sub.py  bcd.py  cbw_cwd.py  cmp.py  cmp16.py  configuration.py  dma.py  generate.sh  helpers.py  inc_dec.py  inc_dec16.py  int.py  interrupt.py  jmp_call_ret.py  jmp_call_ret_far.py  jmp_call_ret_far.sh  jmp_call_ret_far2.py  jmp_call_ret_far2.sh  misc.py  misc2.py  misc2b.py  misc3.py  mov.py  mov2.py  neg.py  or_and_xor_test.py  or_and_xor_test_16.py  push_pop.py  rcl_rcr_rol_ror_sal_sar.py  run-test-pi86.sh  run_tests.py  strings.py  test-one-pi86.sh
pi86-verify/: CMakeLists.txt  LICENSE  cycles.cpp  pi86.cpp  test.asm  x86.cpp  x86.h
